# ChangeLog for app-leechcraft/lc-core
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-core/ChangeLog,v 1.2 2013/04/06 08:29:50 pinkbyte Exp $

  06 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> lc-core-9999.ebuild:
  Bump EAPI to 5, add documentation building and installing, thanks to
  0xd34df00d

*lc-core-9999 (08 Mar 2013)
*lc-core-0.5.90 (08 Mar 2013)
*lc-core-0.5.85 (08 Mar 2013)
*lc-core-0.5.70-r1 (08 Mar 2013)

  08 Mar 2013; Maxim Koltsov <maksbotan@gentoo.org> +lc-core-0.5.70-r1.ebuild,
  +lc-core-0.5.85.ebuild, +lc-core-0.5.90.ebuild, +lc-core-9999.ebuild,
  +metadata.xml:
  Move to app-leechcraft/category

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org>
  leechcraft-core-0.5.70-r1.ebuild, leechcraft-core-0.5.85.ebuild,
  leechcraft-core-0.5.90.ebuild, leechcraft-core-9999.ebuild:
  Move Qt dependencies to the new category

  16 Feb 2013; Agostino Sarubbo <ago@gentoo.org> leechcraft-core-0.5.90.ebuild:
  Stable for x86, wrt bug #457824

  16 Feb 2013; Agostino Sarubbo <ago@gentoo.org> leechcraft-core-0.5.90.ebuild:
  Stable for amd64, wrt bug #457824

  11 Jan 2013; Maxim Koltsov <maksbotan@gentoo.org> leechcraft-core-9999.ebuild:
  Add qt-declarative dependency to 9999, thanks to 0xd34df00d

*leechcraft-core-0.5.90 (25 Dec 2012)

  25 Dec 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-core-0.5.90.ebuild:
  Bump LeechCraft to 0.5.90, thanks to 0xd34df00d

  21 Dec 2012; Sergey Popov <pinkbyte@gentoo.org> leechcraft-core-9999.ebuild:
  Remove obsolete pkg_pretend function - overrided by eclass one

  21 Dec 2012; Sergey Popov <pinkbyte@gentoo.org> leechcraft-core-9999.ebuild:
  Add two icon themes to run-time dependency, thanks to 0xd34df00d

  19 Dec 2012; Maxim Koltsov <maksbotan@gentoo.org>
  -leechcraft-core-0.5.70.ebuild, -leechcraft-core-0.5.75-r1.ebuild,
  -leechcraft-core-0.5.80.ebuild:
  Remove old LeechCraft versions
