@@ -4,20 +4,20 @@ Hash: SHA256
 DIST leechcraft-0.5.70.tar.xz 4793076 SHA256 f9b6ff57005a4883042256b699451382ae5d3325e43f44097fbde3fdd77b859f SHA512 e3e5141c7f4b2061fc4e185c21a74f1674c1fa8219cec465d3401f90e6f9cd6a54df1dda40a8575e17e3278842586778e9f091f807c9e06dd4b3dd1544fbc837 WHIRLPOOL 52deb1476462c85119882851892e57af4f08e972e652a0de70b6a794beb3550a45626397664d49b523d7916649e84523f46dc5d54d20846c151d4491289fa642
 DIST leechcraft-0.5.85.tar.xz 5463144 SHA256 3208d8013911c9d848dc007554b0a6e22eee0ed8e16c25a11da9a7931650f694 SHA512 76fb2e9cc9be1219b603f2ea04af945b63376d0e0834a46a668eb23c66a3939d4239b410235302866523cd26918e1dd09c7a6e868845e9d458df96829ba81a70 WHIRLPOOL 84a141d70400201a481c9ae1fd362d079e0357022fd16398053264e7b97996b62b44ae2190cb44ab3c537627d6586eca38de18aab8b2490f26bcc92183e515b4
 DIST leechcraft-0.5.90.tar.xz 6147148 SHA256 68c3dd66c0456dd75aabc818580c1c54ebbb7d8ccaa8db322a91e456b34acc43 SHA512 e82d44e010a13b961dbda98f993afbe3003f0925bc63d4ecd59ae2b9b2f030455d6bafbe9aa9eb8fe98f9ae09050cd9bed01e3e5e1703a2781e74bdc8e9408b7 WHIRLPOOL 3a9fe7afe32dc0cb8dda12c3e430e1112a115de7264bc9536c0cadb64ad56b1dcb19340220ab7fd0f38db24fd14c79ccd8f2ca35199dd6090fa4e94dab337017
-EBUILD lc-core-0.5.70-r1.ebuild 938 SHA256 9cff06fce6de50d9465951ec12add042e34e95a94005e22663fe0f7eff7caf97 SHA512 cdda302400a6611ee4cac62a860085be8484813107c96ec61cee192e1bd020af5dd5eab97fba3548ad371080c0161a20b1b0ec149b23c3b02e239b6b51f7d91d WHIRLPOOL f53dd837b3dc1b787a2c4b8acebdf042d948dbdbfee8dd1ab9c5a75ed4960adb5c75b4a64bef9ccc1b28c1df29cea4a8700c33f58ff7b41899573f313451a79f
-EBUILD lc-core-0.5.85.ebuild 970 SHA256 1242fd7c88d127abbecfea437de1379f3249495b032bdb19749e1363c2739d4d SHA512 26b86ef4070e64fcb0f7363f4d61e836e2f45cbd842c13d067828c565a2f91e81beed11ed29cf4a12544f0e6ba79b0a48f6c12423dcc233ee837d91195c7c48c WHIRLPOOL b9ded8250a71741a9983567dcd8566b48efa5d5a2f39281ca13d0e2848d2422356cb9f9dd2e9e9bd2aefa97c479094b46bdb192288ca42daed6d851cd2e7341f
-EBUILD lc-core-0.5.90.ebuild 1022 SHA256 77c94fb64beb78398bfeb3ca01b35680f3477d028e128cc458bce8eb10c40955 SHA512 425d2055da375c8f4c74903f08ded91e4cfec59f2a6c0fb52f3ed5bb65537a72808bb8b04957a5e53e4a75e2c635f37726e70904f54ae45eb886d9ae83780b73 WHIRLPOOL d92508e5d87b22a73fb2128e3a587088c7a378baec1e1ca8f8becab637088a2f58b86c4786aeace95169ee0f45858bc92fa75bbd6bc5d181b98c7588e0aaa613
-EBUILD lc-core-9999.ebuild 1199 SHA256 99f2b487d6c789f8b0ea3a8aaea8554aa1d21bf3ea1409db9c30c1bcb77b08f1 SHA512 758c253d4110f73415c86b1834ef466b8138ca7c7cd547a0593bf3c1d948d5949ec35079990ab7d6c017df5840d2b52452775db0cf9fe8f85bc5b95977858e49 WHIRLPOOL 4f8caae7f9e87cfb2e6d182152b158871ad7372841738951ff1ff2d92dbf446c1233b3de102893da5302321ea74d845df7a97692defe813ed6c61f8e81ee088c
-MISC ChangeLog 7183 SHA256 2eb2b8ce90fdf057e9ccb1a1e640277b130eec59f4f7f49b641d011c79f485ab SHA512 f7808cce476c8f1dda96220c226aa472a37ec85eede7cbfde8e384f8bfc3c818e2932f838d365f5bcfc5ef23572161e2d07f2d35c4410ebf25716788c75cee46 WHIRLPOOL 24945e4c897758d3441995ebe3dd0d664201b175fa9de3de717036e9dd1fb2d7d6ced6b23d47f43e6c2159880e97ab71f2f96d3a545746cd1541387a2adcc560
+EBUILD lc-core-0.5.70-r1.ebuild 933 SHA256 ee695b43731cba4005ccc40527cb1a9c287e5a0693468cbd8d1163a4cbb754a5 SHA512 f158e33305d11da6df55ff5aa74a666956dabb7235aa08064861be5310f4abcf89549aa94692745c652908632ec16074c9e41956d5564acfa0ff94e00d40e9fb WHIRLPOOL 326ce096595680cd068082c4b5428a4e38641d6e9ca625d48059c320c0733ee2bdee9bcc228b6d4d89a15e32774c997683ea8f79360c9237dbbd75a1d32fea7d
+EBUILD lc-core-0.5.85.ebuild 965 SHA256 6870bbc5c512c29088c4e6c8db7bd0902ab2f05b5bb05fa37cb05fc19be2207c SHA512 bc3bb67c21b2231f0038985c02083c0a373fe567a2f008a3364baa4e1e0658847b86f0956308f1184a28df6172be785060310a1ff3e778857fa98b2d77839f03 WHIRLPOOL bf80ac370e6ae8e93f4d9388a30aec42df4901d0d5274eb282cfcd18af9ecb57a0367249beb9be96b7705869e05e57ac275fd1f60b8c835c0cc93538e8a4e5ad
+EBUILD lc-core-0.5.90.ebuild 1017 SHA256 67ea4dd1d82bdef42b677197fdaff14d8e584ce421d019f5dc673f51beb82d65 SHA512 cdb62312895a4f77639c04e47d5c455cbeb6665401cc5bf07e7ab203dc8726537fceb5e554126540692c49a116dab49a69bb2ddac7bb2fd22666816972f77d10 WHIRLPOOL e56b733b986fc5420cd97e88c56d37d489be575edf92a80965410e57af50ef910a1aa1a6ff91cfd28e4108907b81fe022739901652506a9a9b4c3da8553eedc8
+EBUILD lc-core-9999.ebuild 1140 SHA256 05c945392611a00d620a419adecdcd1c5f5dd448c54be0a2dcd6232a24900068 SHA512 c228f4041c302eac01ed21f293d75ee05fbb9c92c26beaf5249f01ad25e70cefb895456df5caf33d904de2d28aee47af2b5740c06ded235d6c4796874d5d4d65 WHIRLPOOL e560d62b7d6be45651a2890479be06927f3457584ffc7895cd03eba411bda02590945aeaae626d2eb6b262d90f2870d17b90e0260211298a733f2f30f3f5a01d
+MISC ChangeLog 7484 SHA256 ff934df4f29961eab312b270fb32ba13231deb49907bda8678506dd0fbcbdb65 SHA512 85b76fe85d288b32efb45fa0c6f37dd47bcc62cdf672fd9b2a4ffb7c51673ea7ecac801414c1393936f7988f0bd8a2c3d28a27a7ffebf3131d8fff5d2623b325 WHIRLPOOL d39a6327d9cd798789905df0b198ae36badadbdedbc35dfd68946fc739ec9e0d39a98a457e8568e00d98e26f6ded8c815bcb6b1b604c6a31de9e0d5477114ee1
 MISC metadata.xml 329 SHA256 f6ad3c1afe87da4cd79c52f775c339ec78e39ec6458ec46c7fde8bcfad4236e0 SHA512 5f3625221b7ac16b5e949b8dba9f0d9e7d52aab3ec42b4f7280145188400c181318c6d428e204eb2d3391cd6b48af8168b0aca2dff0ec4ad3588c68be9f6d628 WHIRLPOOL 143a6088e6ed594e4b93b40e4fbb529f94ba56befdfd60dd5a2d03c60878e66f33af1f85e5f25c4661736645e27209ed50cb7b2bc018a7b4577a3d7a25eafdd5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRX9z/AAoJECo/aRed9267dQAIAMeXBBcYISEdolLn0QDbFkKc
-b4kNZo9n99bb8pqbHMHnCDQlbtWWJBfUmKpBhRsdasOS1bBgV1B0r9+NJFt+WTpj
-T6ZmZoPIBDCS0ExtGFcKuN+nRO1lnmjh380Ct34DdfgplCyMWzNKw9CvlOZeHslN
-kBr6nwbsKV+G2G5rhqZ95PUCnvPRq/dK+3xFhl3AyYnn2evr3wvQvM2gJO/KKuEQ
-8u8innXlYqMqKfx0UweGPkB65h4sgGQ4FGVBv+solxUrQInFpL+RBW4llE+dOaRH
-LfXYGVN+wJ8gqU62u2I6JwQ7IUB48W4td8wJK30l48zM136YrgCi0/e9VSh6xh0=
-=KYEf
+iQEcBAEBCAAGBQJRX96cAAoJECo/aRed92672iQIAJDYhIDdAbFA1vdkzCKbJd8t
+u934vuszdYoHMe/ormNMP4mE8T8H1l2/hrokb65ZqfPwIYSoDYrKCv70FC15NMgq
+0TYahkNEYCK3M6atEVw/xGvebRft00JRuilTFLOq3UOSNPQAQkMce8fjuTFrcJLh
+6xAvQ5UAO6B89uKrYFfOTTvv7D/pCFbONsrOi5BWedIF7wqIWaV/fgUUuIZ12O6Z
+kSvue/8ofR1S8ogkIPWY0EzzEdpM2QCleCSCEtyuFAhB/K00M0XopXxOBkTde760
+vZwLET9JKDloQGzLA3PRr50CFP/a+xM2Wn7L4eRNwW2Rccdj811k8vfllYOxZhY=
+=d14p
 -----END PGP SIGNATURE-----
