@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-core/lc-core-9999.ebuild,v 1.2 2013/04/06 08:29:50 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-leechcraft/lc-core/lc-core-9999.ebuild,v 1.3 2013/04/06 08:36:42 pinkbyte Exp $
 
 EAPI="5"
 
@@ -45,6 +45,5 @@ src_configure() {
 
 src_install() {
 	cmake-utils_src_install
-	make_desktop_entry leechcraft "LeechCraft" leechcraft.png
 	use doc && dohtml -r "${CMAKE_BUILD_DIR}/${PN#lc-}"/out/html/*
 }
